--- a/bieumau/templates/bieumau/danh_sach.html
+++ b/bieumau/templates/bieumau/danh_sach.html
@@ -36,7 +36,7 @@
         <i class="fa-solid fa-moon"></i>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm" style="background-color: var(--navbar-bg);">
     <div class="container">
         <a class="navbar-brand" href="/"><strong>KHU PHỐ 25</strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar">
@@ -67,8 +67,13 @@
                             <li><a class="dropdown-item" href="/danh-ba/nhan-khau/">DS Nhân Khẩu</a></li>
                             <li><a class="dropdown-item" href="/admin/">Trang Quản trị</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="{% url 'logout' %}">Đăng xuất</a></li>
-                        </ul>
+                            <li>
+                                <form class="d-inline" method="post" action="{% url 'logout' %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="dropdown-item">Đăng xuất</button>
+                                </form>
+                            </li>
+                            </ul>
                     </li>
                 {% else %}
                     <li class="nav-item">
@@ -85,7 +90,6 @@
     </div>
 </nav>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
     <main class="container my-5">
         <div class="text-center mb-5">
             <h1 style="color: var(--heading-color);">Thư Viện Biểu Mẫu</h1>
