--- a/dancu/templates/dancu/danh_sach_nhan_khau.html
+++ b/dancu/templates/dancu/danh_sach_nhan_khau.html
@@ -92,18 +92,23 @@
                 
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                         <a class="nav-link {% if '/danh-ba/' in request.path %}active{% endif %}" href="/danh-ba/">Danh Bạ</a>
+                        <a class="nav-link {% if '/danh-ba/' in request.path %}active{% endif %}" href="/danh-ba/">Danh Bạ</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Chào, {{ user.username }}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
                             <li><a class="dropdown-item" href="/danh-ba/nhan-khau/">DS Nhân Khẩu</a></li>
                             <li><a class="dropdown-item" href="/admin/">Trang Quản trị</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="{% url 'logout' %}">Đăng xuất</a></li>
-                        </ul>
+                            <li>
+                                <form class="d-inline" method="post" action="{% url 'logout' %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="dropdown-item">Đăng xuất</button>
+                                </form>
+                            </li>
+                            </ul>
                     </li>
                 {% else %}
                     <li class="nav-item">
